# Ouroboros

./: .coderabbit.yml  .env.example  .gitignore  .markdownlint-cli2.jsonc  .mdformat.toml  .pre-commit-config.yaml  .prettierignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  GEMINI.md  README.md  SECURITY.md  TODOs.md  WARP.md  alembic.ini  auto_rebase.sh  continue_rebase.sh  docker-compose.dev.yml  docker-compose.e2e.yml  docker-compose.yml  env.example  justfile  mise.toml  mkdocs.yml  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml
.basedpyright/: baseline.json
.claude/: hookify.block-push-main.local.md  hookify.warn-lru-cache.local.md  hookify.warn-stdlib-logging.local.md  hookify.warn-utcnow.local.md
.claude/instincts/: api-architecture.md  commit-conventions.md  library-substitutions.md  protected-files.md  rfc9457-errors.md  service-pattern.md  state-machines.md  testing-tiers.md
.claude/skills/: ouroboros-patterns.md
.cursor/commands/: ci-check.md
.cursor/rules/: index.mdc  phase-3-task-verification.mdc
.cursor/rules/architecture/: core-concepts.mdc  core-state-machine.mdc  docker-guidelines.mdc  security-basics.mdc  service-layer-patterns.mdc
.cursor/rules/code/: fastapi-guidelines.mdc  fastapi-patterns.mdc  pydantic-schemas.mdc
.cursor/rules/frontend/: schema-integration.mdc  sse-implementation.mdc  ssr-authentication.mdc  ssr-patterns.mdc  sveltekit5-runes.mdc  sveltekit5-stores.mdc
.cursor/rules/testing/: backend-testing.mdc  debug-workflow.mdc  e2e-testing.mdc  frontend-testing.mdc  test-organization.mdc  testing-patterns.mdc
.cursor/rules/tooling/: commit-style.mdc
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/prompts/: docs_update.prompt.md  next_task.prompt.md  quality_improvement.prompt.md
.github/workflows/: ci.yml  docker-deploy.yml
.kiro/specs/nicegui-web-interface/: design.md  requirements.md  tasks.md
.kiro/specs/phase-1-core-infrastructure/: design.md  requirements.md
.kiro/specs/phase-2-api-implementation/: design.md  requirements.md
.kiro/specs/phase-2b-agent-api-v2/: design.md  requirements.md
.kiro/specs/phase-2c-web-ui-api-v1/: design.md  tasks.md
.kiro/specs/phase-2e-control-api-v1/: design.md  requirements.md
.kiro/specs/phase-3-e2e-test-coverage/: design.md  requirements.md  tasks.md
.kiro/specs/phase-3a-core-functionality-verification/: design.md  requirements.md  tasks.md
.kiro/specs/phase-3b-agent-management-integration/: design.md  requirements.md  tasks.md
.kiro/specs/phase-3c-advanced-features-realtime/: design.md  requirements.md  tasks.md
.kiro/specs/phase-4-containerization-deployment/: design.md  requirements.md
.kiro/specs/phase-5-task-distribution/: design.md  requirements.md  tasks.md
.kiro/specs/phase-6-monitoring-testing-documentation/: design.md  requirements.md
.kiro/specs/phase-6a-system-monitoring-admin/: design.md  requirements.md  tasks.md
.kiro/specs/sveltekit-frontend-removal/: design.md  requirements.md  (+1 more)
.kiro/steering/: architecture.md  frontend.md  index.md  phase-3-task-verification.md  pipeline.md  product.md  structure.md  tech.md
.reports/: dead-code-analysis.md
.serena/: project.yml
alembic/: env.py
alembic/versions/: 20260210_151904_f65a83aa8920_add_paused_state_to_attackstate_enum.py
app/: main.py
app/core/: config.py  control_exceptions.py  control_rfc9457_middleware.py  logging.py  openapi_customization.py  permissions.py  state_machines.py
app/db/: __init__.py  health.py  session.py
app/models/: agent.py  agent_error.py  attack.py  hashcat_benchmark.py  project.py
app/schemas/: agent.py  agent_error.py  campaign.py  health.py  project.py  queue.py  resource.py
app/ui/: __init__.py
contracts/: current_api_openapi.json  v1_api_swagger.json
docker/scripts/: backup-db.sh  entrypoint.sh  health-check.sh  restore-db.sh
docs/: api-reference-agent-auth.md  index.md  strategy.md
docs/api/: README.md  agent-api-v2.md  agent.md  agent_flow.md  control.md  error-responses.md  overview.md  web.md  workflow-examples.md
docs/architecture/: api.md  components.md  overview.md
docs/development/: agent-api-v2-development.md  analysis_notes.md  api-reference.md  authentication.md  developer_guide.md  frontend.md  security.md  setup.md  style-guide.md  testing-status.md  testing.md
docs/getting-started/: configuration.md  installation.md  quick-start.md
docs/plans/: 2026-01-23-architecture-improvements.md  implementation-tracker.md
docs/stylesheets/: extra.css
docs/user-guide/: agent-setup.md  attack-configuration.md  common-issues.md  faq.md  nicegui-interface.md  optimization.md  resource-management.md  troubleshooting.md  web-interface.md
docs/v2_rewrite_implementation_plan/: core_algorithm_implementation_guide.md  implementation_plan.md  phase-1-core-infrastructure.md  phase-2-api-implementation.md  phase-2b-resource-management.md  phase-2c-refactor-cleanup.md  phase-3-e2e-test-coverage-plan.md  phase-3-web-ui-foundation.md  phase-4-containerization-deployment.md  phase-6-monitoring-testing-documentation.md
frontend/: .env.example  .gitignore  .oxlintrc.json  .prettierignore  .prettierrc  Dockerfile  Dockerfile.dev  bunfig.toml  eslint.config.js  package.json  playwright.config.ts  pnpm-lock.yaml  vitest-setup-client.ts
frontend/e2e/: attacks-list.test.ts  attacks_modals.test.ts  campaigns-list.e2e.test.ts  resources-list.test.ts  settings.test.ts
frontend/src/: app.d.ts
frontend/static/: site.webmanifest
frontend/tests/: global-setup.e2e.ts  global-teardown.e2e.ts
project_spec/: requirements.md  tasks.md  user_stories.md
scripts/: __init__.py  seed_e2e_data.py
tests/: __init__.py  conftest.py
tests/db/: test_agent.py  test_config.py  test_session.py
tests/factories/: agent_error_factory.py
tests/integration/: test_event_bus_integration.py
tests/unit/: test_attack_service.py  test_campaign_service.py  test_event_bus.py  test_resource_cleanup.py  test_state_machines.py
(+223 files in other folders)
